<?xml version="1.0"?>
<package format="2">
  <name>aruco</name>
  <version>2.0.20</version>
  <description>
    ArUco is an easy-to-use C++ library for detection of squared
    planar markers based on OpenCv. It can detect markers from a
    variety of ditionaries ARUCO, APRILTAGS, ARTAG and ARTOOLKIT+.

    It is a library, to rule them all ;)
  </description>
  <maintainer email="rmsalinas@uco.es">Rafael Munoz-Salinas</maintainer>
  <author email="rmsalinas@uco.es">Rafael Munoz-Salinas</author>
  <license>BSD</license>
  <url>http://www.uco.es/investiga/grupos/ava/node/26</url>
  <buildtool_depend>cmake</buildtool_depend>
  <depend>libopencv-dev</depend>
</package>
